--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
   "license": "MIT",
   "type": "commonjs",
   "dependencies": {
-    "express": "^4.18.2",
-    "cors": "^2.8.5"
+    "child_process": "^1.0.2",
+    "cors": "^2.8.5",
+    "express": "^4.18.2"
   }
 }
